Adding functionality for reservation creation/retrieval and updating flightStatus
